# BioxML-allergen-epitopes

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/fastapi/: .env.example  Dockerfile  README.md  compose.lambda.yaml  compose.yaml  lambda-uv.Dockerfile  lambda.Dockerfile  package.json  pyproject.toml  requirements.txt  run.py  updater.py  vercel.json
apps/fastapi/api/: config.py  main.py
apps/fastapi/api/endpoints/v1/: api.py  utils.py
apps/fastapi/api/endpoints/v1/auth/: verify.py
apps/fastapi/data/: 3ob4_A_epitopes_score.csv  7lm9_A_SEMA2_epitopes_score.csv  AAK96887-1d.csv  AAK96887-sema-1d.csv  class_I.csv  class_II.csv  lbc.csv
apps/fastapi/scripts/: deploy.sh  teardown.sh
apps/fastapi/src/app/: main.py
apps/fastapi/src/app/api/: deps.py
apps/fastapi/src/app/core/: config.py  utils.py
apps/fastapi/src/app/crud/: base.py  crud_conformational_b_prediction.py  crud_job.py  crud_linear_b_prediction.py  crud_mhc_i_prediction.py  crud_mhc_ii_prediction.py  crud_report.py
apps/fastapi/src/app/schemas/: __init__.py  base.py  conformational_b_prediction.py  error.py  health.py  input_object.py  job.py  linear_b_prediction.py  mhc_i_prediction.py  mhc_ii_prediction.py  report.py
apps/fastapi/src/app/services/: auth.py  background_tasks.py  conformational_b.py  evaluation.py  hf_inference.py  inference.py  pipeline.py  postprocess.py  preprocess.py
apps/fastapi/tests/api/v1/: test_items.py
apps/tools-fastapi/: .dockerignore  .env.example  .gitignore  bepipred-2.0.readme  netMHCIIpan-4.3.readme  netMHCpan-4.1.readme  package.json  pyproject.toml  requirements.txt
apps/tools-fastapi/src/app/: main.py
apps/tools-fastapi/src/app/core/: config.py
apps/tools-fastapi/src/app/services/: inference.py
notebooks/: SEMA_1D_Original.ipynb  SaprotHub.ipynb  TCR_epitope_prediction_NewEpitope_NewTCR_LOOCV.ipynb  TCR_epitope_prediction_NewEpitope_NewTCR_PREDICTION.ipynb  epitopes.ipynb  output_protein.txt  protein_language_modeling.ipynb  pyproject.toml  requirements.txt
notebooks/ConfB/: asa_rsa_output.csv  conf.ipynb  finetuning_ESM3_1.4B.ipynb  residue_clusters.csv
notebooks/T-cell/: T-cell-classI.ipynb  T-cell-classII.ipynb  classII_peptides.csv  classI_peptides.csv
notebooks/T-cell/TCR/: Dockerfile  model_ESM3 + VJ genes.pickle  model_ESMonly.pickle  pipeline.ipynb
notebooks/T-cell/TCR/tcr_model/: inference.py
notebooks/sema-1d-sagemaker/: SEMA-1D_finetuning_ESM2_SageMaker.ipynb
notebooks/sema-1d-sagemaker-old/: SEMA-1D_finetuning_ESMV2_650.ipynb
notebooks/sema-1d-sagemaker-old/scripts/: inference.py  lora-train.py
notebooks/sema-1d-sagemaker/scripts/: inference.py  requirements.txt  train.py
(+173 files in other folders)
