[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["zacharypfiz <ztpfizcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
biopython = "^1.84"
esm = "^3.0.4"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
