[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI for B-cell and T-cell epitope prediction."
authors = ["trevorpfiz <elektrikspark@gmail.com>", "zacharypfiz <ztpfizcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.111.0"
openai = "^1.35.6"
pandas = "^2.2.2"
requests = "^2.32.3"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pylint-pydantic = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
